<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".activities.Story">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:rotation="90"
        android:scaleX="2"
        android:scaleY="2"
        app:srcCompat="@drawable/backgroundsavethedots"
        tools:layout_editor_absoluteX="-144dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="274dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:fontFamily="@font/savethedotsfontfamily"
        android:text="@string/histoire"
        android:textColor="@color/Black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHistoire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="492dp"
        android:fontFamily="@font/savethedotsfontfamily"
        android:text="@string/histoire_du_jeu_1"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHistoire2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="368dp"
        android:fontFamily="@font/savethedotsfontfamily"
        android:text="@string/histoire_du_jeu_2"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHistoire3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="244dp"
        android:fontFamily="@font/savethedotsfontfamily"
        android:text="@string/histoire_du_jeu_3"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHistoire4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="@font/savethedotsfontfamily"
        android:text="@string/histoire_du_jeu_4"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHistoire5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:gravity="center_horizontal"
        android:text="@string/histoire_du_jeu_5"
        android:textColor="@color/Black"
        android:fontFamily="@font/savethedotsfontfamily"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>