<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".activities.MenuPrincipal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="90"
        android:scaleX="2"
        android:scaleY="2"
        android:alpha="0.6"
        app:srcCompat="@drawable/backgroundsavethedots" />

    <TextView
        android:id="@+id/textView_title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/textView_title_app2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name_presente"
        android:textSize="25sp"
        android:fontFamily="@font/savethedotsfontfamily"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/button_rules"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#FFB342"
        android:text="@string/rules"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_begin_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFB342"
        android:text="@string/commencer_partie"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintBottom_toTopOf="@id/button_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue_joueur_se"
        android:textColor="@color/Black"
        android:textSize="25sp"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/button_story"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="#FFB342"
        android:text="@string/story"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>