<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Victory" >

  <LinearLayout
      android:id="@+id/linearlayoutvictory"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="visible"
      android:background="@color/Orange">

    <TextView
        android:id="@+id/victorytxt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/victoire"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/savethedotsfontfamily"
        android:textColor="@color/Black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/bravo_vous_avez_sauv_les_dots"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintTop_toBottomOf="@id/victorytxt"
        android:layout_marginTop="60dp"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="invisible"
      android:id="@+id/linearlayoutdefeat"
      android:background="@color/SteelBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/defaite"
        android:textColor="@color/Black"
        android:textSize="30sp"
        android:fontFamily="@font/savethedotsfontfamily"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reasontext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:gravity="center"
        android:fontFamily="@font/savethedotsfontfamily"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/victorytxt"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/oh_non_tous_les_dots_sont_morts"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/savethedotsfontfamily"
        app:layout_constraintTop_toBottomOf="@id/victorytxt"
        android:layout_marginTop="60dp"/>
  </LinearLayout>

  <Button
      android:id="@+id/menuprincipal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/menu_principal"
      android:backgroundTint="#ffe0b3"
      android:fontFamily="@font/savethedotsfontfamily"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="50dp"
      />

</androidx.constraintlayout.widget.ConstraintLayout>